--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ android {
 
     aaptOptions {
         noCompress "lite"
+        noCompress "tflite"
     }
 }
 
@@ -51,4 +52,8 @@ dependencies {
     // MLKit
     implementation 'com.google.mlkit:object-detection:16.2.4'
     implementation 'com.google.mlkit:image-labeling-custom:17.0.1'
+
+    implementation 'org.tensorflow:tensorflow-lite:+'
+    implementation 'org.tensorflow:tensorflow-lite-task-vision-play-services:0.4.2'
+    implementation 'com.google.android.gms:play-services-tflite-gpu:16.0.0'
 }
